# cplib_back

./: .clang-format  .gitignore  404.html  BUILD.gn  CMakeLists.txt  README.md  a.txt  cp.gni  index.html  mkdocs.yml  prepare.py  sitemap.xml  xxx.gn
.github/workflows/: test.yml
about/: index.html
cmake/: clang-format.cmake
docs/: about.md  index.md  mkdocs.md
docs/base/: builtin.md
docs/ds/: fenwick.md
mkdocs/: index.html
search/: search_index.json
src/: BUILD.gn  aligned.h  all.h  empty.cpp  timer.hpp
src/base/: base.h  builtin.c  builtin.h
src/dataStruct/: basic.h  block.h  cdqConquer.cpp  cdqConquer.h  dsu.h  fenwick.h  mix.cpp  mix.h  segmentTree.h
src/deprecated/: fenwick_dep.h
src/ds/: basic.h  basic.hpp  block.hpp  cdqConquer.cpp  cdqConquer.h  ds.h  dsu.hpp  fenwick.h  fenwick.hpp  listVector.hpp  mix.cpp  mix.h  segmentTree.h  segmentTree.hpp
src/graph/: circleCount.cpp  circleCount.h  cut.cpp  cut.h  flow.hpp  graph.h  graph.hpp  kosaraju.hpp  lca.hpp  miniSpanTree.cpp  miniSpanTree.h  shortestPath.cpp  shortestPath.h  tour.cpp  tour.h
src/math/: basic.cpp  basic.h  basic.hpp  bigInt.hpp  binom.h  binom.hpp  builtin.cpp  builtin.h  fft.cpp  fft.h  fmt.cpp  fmt.h  geometry.cpp  geometry.h  geometry.hpp  math.h  matrix.h  matrix.hpp  mes.h  mes.hpp  mix.cpp  mix.h  mod.h  mod.hpp  ntt.hpp  numberTheory.cpp  numberTheory.h  numberTheory.hpp
src/math/poly/: factorial.cpp  factorial.h  poly.hpp  polyAll.h  polyFFT.hpp  polyMTT.hpp  polyNTT.hpp  polyOrigin.hpp  polyS.hpp
src/string/: automaton.hpp  duval.cpp  duval.h  kmp.cpp  kmp.h  manacher.cpp  manacher.h  minPresent.hpp  string.h  string.hpp  suffixArray.cpp  suffixArray.h  trie.hpp
src/thread/: threadSafeQueue.hpp
test/: main.cpp  testSource.gni  util.h
test/single_alone_test/: blocks_trans_test.cpp
test/smoke_test/: cf.cpp  luogu.cpp
test/test_data/: FastIntIO_tmp.txt
test/unit_test/: base_test.cpp  ds_test.cpp  graph_test.cpp  math_test.cpp  poly_test.cpp
test/unit_test/base/: base_builtin_test.cpp  builtin_test.cpp
test/unit_test/ds/: ds_basic_test.cpp  ds_block_test.cpp  ds_cdqConquer_test.cpp  ds_fenwick_test.cpp  ds_listVector_test.cpp  ds_mix_test.cpp  ds_segmentTree_test.cpp  ds_test.cpp  listVector_test.cpp
test/unit_test/graph/: graph_circleCount_test.cpp  graph_cut_test.cpp  graph_flow_test.cpp  graph_kosaraju_test.cpp  graph_lca_test.cpp  graph_miniSpanTree_test.cpp  graph_shortestPath_test.cpp  graph_test.cpp  graph_tour_test.cpp
test/unit_test/math/: basic_test.cpp  binom_test.cpp  fft_test.cpp  fft_test.py  math_basic_test.cpp  math_bigInt_test.cpp  math_binom_test.cpp  math_fft_test.cpp  math_fmt_test.cpp  math_geometry_test.cpp  math_matrix_test.cpp  math_mes_test.cpp  math_mix_test.cpp  math_mod_test.cpp  math_ntt_test.cpp  math_numberTheory_test.cpp  math_poly_test.cpp  mix_test.cpp  poly_test.cpp
test/unit_test/string/: string_automaton_test.cpp  string_duval_test.cpp  string_kmp_test.cpp  string_manacher_test.cpp  string_miniPresent_test.cpp  string_suffixArray_test.cpp  string_test.cpp  string_trie_test.cpp
test/unit_test/thread/: threadSafeQueue_test.cpp  thread_threadSafeQueue_test.cpp
tests/: CMakeLists.txt
tests/unit_test/: util.cpp
tests/unit_test/math/: basic_test.cpp
