template("cp_source_set") {
  source_set(target_name) {
    forward_variables_from(invoker, "*")
    configs += [ "//:cp_config" ]
  }
}

template("cp_static_library") {
  static_library(target_name) {
    forward_variables_from(invoker, "*")
    configs += [ "//:cp_config" ]
  }
}

template("cp_shared_library") {
  shared_library(target_name) {
    forward_variables_from(invoker, "*")
    configs += [ "//:cp_config" ]
  }
}

template("cp_executable") {
  executable(target_name) {
    forward_variables_from(invoker, "*")
    configs += [ "//:cp_config" ]
  }
}

template("cp_test") {
  executable(target_name) {
    forward_variables_from(invoker, "*")
    testonly = true
    configs += [
      "//:cp_config",
      "//:cp_test_config",
    ]
    deps += [ "//third_party/gtest:gtest" ]
  }
}
